--- a/app/src/main/res/layout/profile_detail_activity.xml
+++ b/app/src/main/res/layout/profile_detail_activity.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:orientation="vertical"
-    tools:context=".poputi.presentation.modules.common.profile.view.ProfileDetailView">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/notification"
@@ -403,7 +402,7 @@
             android:elevation="10dp"
             android:orientation="vertical"
             app:behavior_peekHeight="0dp"
-            app:layout_behavior=".poputi.presentation.base.MBottomSheet">
+            app:layout_behavior="bonch.dev.poputi.presentation.base.MBottomSheet">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -476,7 +475,7 @@
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
             app:behavior_peekHeight="0dp"
-            app:layout_behavior=".poputi.presentation.base.MBottomSheet">
+            app:layout_behavior="bonch.dev.poputi.presentation.base.MBottomSheet">
 
 
             <TextView
