--- a/app/src/main/res/layout/get_driver_layout.xml
+++ b/app/src/main/res/layout/get_driver_layout.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/get_driver_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".poputi.presentation.modules.passenger.getdriver.view.MapGetDriverView">
+    android:layout_height="match_parent">
 
 
     <TextView
@@ -227,7 +226,7 @@
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
             app:behavior_peekHeight="0dp"
-            app:layout_behavior=".poputi.presentation.base.MBottomSheet">
+            app:layout_behavior="bonch.dev.poputi.presentation.base.MBottomSheet">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -311,7 +310,7 @@
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
             app:behavior_peekHeight="0dp"
-            app:layout_behavior=".poputi.presentation.base.MBottomSheet">
+            app:layout_behavior="bonch.dev.poputi.presentation.base.MBottomSheet">
 
 
             <TextView
@@ -351,7 +350,7 @@
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
             app:behavior_peekHeight="0dp"
-            app:layout_behavior=".poputi.presentation.base.MBottomSheet">
+            app:layout_behavior="bonch.dev.poputi.presentation.base.MBottomSheet">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -463,7 +462,7 @@
             android:elevation="30dp"
             android:orientation="vertical"
             app:behavior_peekHeight="0dp"
-            app:layout_behavior=".poputi.presentation.base.MBottomSheet">
+            app:layout_behavior="bonch.dev.poputi.presentation.base.MBottomSheet">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -533,7 +532,7 @@
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
             app:behavior_peekHeight="0dp"
-            app:layout_behavior=".poputi.presentation.base.MBottomSheet">
+            app:layout_behavior="bonch.dev.poputi.presentation.base.MBottomSheet">
 
             <ImageView
                 android:layout_width="wrap_content"
