--- a/app/src/main/res/layout/map_get_driver_fragment.xml
+++ b/app/src/main/res/layout/map_get_driver_fragment.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".poputi.presentation.modules.passenger.getdriver.view.MapGetDriverView">
+    android:layout_height="match_parent">
 
     <com.yandex.mapkit.mapview.MapView
         android:id="@+id/map"
