--- a/app/src/main/res/layout/regular_drive_fragment.xml
+++ b/app/src/main/res/layout/regular_drive_fragment.xml
@@ -5,20 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/create_regular_ride"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="25dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_margin="15dp"
-        android:layout_marginTop="14dp"
-        android:background="@drawable/bg_btn_blue"
-        android:fontFamily="@font/roboto"
-        android:shadowColor="@color/colorBlue"
-        android:text="@string/createRegularRide"
-        android:textAllCaps="false"
-        android:textSize="16sp" />
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="13dp"
+        android:elevation="25dp"
+        android:theme="@style/WhiteProgressBar"
+        android:visibility="gone" />
+
+    <ImageButton
+        android:id="@+id/create_regular_ride"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"
+        android:background="@drawable/bg_circle_btn"
+        android:elevation="12dp"
+        android:padding="16dp"
+        android:src="@drawable/ic_plus_btn"
+        android:translationZ="10dp" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
