--- a/app/src/main/res/layout/regular_create_ride_layout.xml
+++ b/app/src/main/res/layout/regular_create_ride_layout.xml
@@ -25,8 +25,7 @@
         android:layout_centerInParent="true"
         android:paddingStart="2dp"
         android:paddingBottom="55dp"
-        android:src="@drawable/ic_map_marker"
-        android:visibility="gone" />
+        android:src="@drawable/ic_map_marker" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -53,7 +52,19 @@
                 android:elevation="10dp"
                 android:paddingEnd="1dp"
                 android:src="@drawable/ic_show_route"
-                android:visibility="invisible" />
+                android:visibility="gone" />
+
+            <ImageButton
+                android:id="@+id/show_my_position_c"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="end"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/bg_back_btn"
+                android:elevation="10dp"
+                android:src="@drawable/ic_my_position" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -172,10 +183,11 @@
                         android:layout_weight="1"
                         android:drawableStart="@drawable/ic_ruble"
                         android:drawablePadding="20dp"
+                        android:hint="@string/offer_price"
                         android:paddingTop="12dp"
                         android:paddingBottom="25dp"
-                        android:text="@string/offer_price"
-                        android:textColor="#50000000"
+                        android:textColor="#000000"
+                        android:textColorHint="#50000000"
                         android:textSize="14sp" />
 
                     <ImageButton
@@ -341,6 +353,7 @@
                         android:layout_marginEnd="15dp"
                         android:layout_marginBottom="20dp"
                         android:background="@drawable/bg_btn_gray"
+                        android:clickable="false"
                         android:fontFamily="@font/roboto"
                         android:shadowColor="@color/colorBlue"
                         android:text="@string/saveC"
@@ -357,8 +370,6 @@
                         android:theme="@style/WhiteProgressBar"
                         android:visibility="gone" />
                 </RelativeLayout>
-
-
 
 
             </LinearLayout>
@@ -803,8 +814,8 @@
                 android:layout_below="@id/bottom_sheet_arrow"
                 android:orientation="vertical"
                 android:paddingTop="15dp"
-                android:visibility="gone"
-                android:paddingBottom="15dp">
+                android:paddingBottom="15dp"
+                android:visibility="gone">
 
                 <ImageButton
                     android:id="@+id/show_my_position"
