--- a/app/src/main/res/layout/archive_regular_rides_fragment.xml
+++ b/app/src/main/res/layout/archive_regular_rides_fragment.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@android:color/white"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/text_empty_rides"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="У вас нет архивированных поездок"
+        android:layout_centerInParent="true"
+        android:text="@string/notArchiveRides"
         android:textColor="#60000000"
-        android:textSize="14sp"/>
+        android:textSize="14sp"
+        android:visibility="gone" />
 
-</LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rides_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:theme="@style/CustomProgressBar"
+        android:visibility="visible" />
+
+
+</RelativeLayout>
