--- a/app/src/main/res/drawable/ic_map_marker_black.xml
+++ b/app/src/main/res/drawable/ic_map_marker_black.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="46dp"
-    android:height="66dp"
+    android:height="75dp"
     android:viewportWidth="46"
-    android:viewportHeight="66">
+    android:viewportHeight="75">
 
     <path
         android:fillColor="#2A2A2A"
-        android:pathData="M 23 0 C 35.7025492461 0 46 10.2974507539 46 23 C 46 35.7025492461 35.7025492461 46 23 46 C 10.2974507539 46 0 35.7025492461 0 23 C 0 10.2974507539 10.2974507539 0 23 0 Z" />
+        android:pathData="M23,0 C35.7025,0,46,10.2975,46,23 C46,35.7025,35.7025,46,23,46 C10.2975,46,0,35.7025,0,23 C0,10.2975,10.2975,0,23,0 Z" />
     <path
         android:fillColor="#2A2A2A"
-        android:pathData="M 22 46 H 24 V 66 H 22 V 46 Z" />
+        android:pathData="M22,46 L24,46 L24,66 L22,66 L22,46 Z" />
     <path
         android:fillColor="#ffffff"
-        android:pathData="M 23 14 C 27.9705627485 14 32 18.0294372515 32 23 C 32 27.9705627485 27.9705627485 32 23 32 C 18.0294372515 32 14 27.9705627485 14 23 C 14 18.0294372515 18.0294372515 14 23 14 Z" />
+        android:pathData="M23,14 C27.9706,14,32,18.0294,32,23 C32,27.9706,27.9706,32,23,32 C18.0294,32,14,27.9706,14,23 C14,18.0294,18.0294,14,23,14 Z" />
 </vector>
+
+
+
