--- a/app/src/main/res/layout/active_regular_rides_fragment.xml
+++ b/app/src/main/res/layout/active_regular_rides_fragment.xml
@@ -23,7 +23,7 @@
 
 
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/progress_bar_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
