--- a/app/src/main/res/layout/archive_regular_rides_fragment.xml
+++ b/app/src/main/res/layout/archive_regular_rides_fragment.xml
@@ -22,7 +22,7 @@
         android:layout_height="match_parent" />
 
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/progress_bar_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
