--- a/app/src/main/res/layout/chat_activity.xml
+++ b/app/src/main/res/layout/chat_activity.xml
@@ -151,7 +151,7 @@
     </LinearLayout>
 
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/progress_bar_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:theme="@style/CustomProgressBar"
