--- a/app/src/main/res/layout/detail_order_layout.xml
+++ b/app/src/main/res/layout/detail_order_layout.xml
@@ -270,7 +270,7 @@
                 android:textStyle="bold" />
 
             <ProgressBar
-                android:id="@+id/progress_bar"
+                android:id="@+id/progress_bar_btn"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -305,7 +305,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:elevation="10dp">
+        android:elevation="40dp">
 
         <LinearLayout
             android:id="@+id/comment_detail_bottom_sheet"
@@ -315,6 +315,7 @@
             android:orientation="vertical"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
+            android:elevation="30dp"
             android:paddingBottom="20dp"
             app:behavior_peekHeight="0dp"
             app:layout_behavior="bonch.dev.poputi.presentation.base.MBottomSheet">
@@ -357,6 +358,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0"
+        android:elevation="20dp"
         android:background="@android:color/black"
         android:visibility="gone" />
 
