--- a/app/src/main/res/layout/driver_signup_activity.xml
+++ b/app/src/main/res/layout/driver_signup_activity.xml
@@ -49,7 +49,7 @@
         android:visibility="gone" />
 
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/progress_bar_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:theme="@style/CustomProgressBar"
