--- a/app/src/main/res/layout/driver_signup_step_fragment.xml
+++ b/app/src/main/res/layout/driver_signup_step_fragment.xml
@@ -115,7 +115,7 @@
         android:visibility="gone" />
 
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/progress_bar_btn"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:theme="@style/CustomProgressBar"
