--- a/app/src/main/res/layout/get_offers_layout.xml
+++ b/app/src/main/res/layout/get_offers_layout.xml
@@ -1,25 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/get_driver_layout"
+    android:id="@+id/get_offers_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-    <TextView
-        android:id="@+id/get_driver_center_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="40dp"
-        android:fontFamily="@font/roboto"
-        android:gravity="center_vertical"
-        android:text="@string/offerYourPrice"
-        android:textAlignment="center"
-        android:textColor="@android:color/black"
-        android:textSize="24sp" />
+    android:layout_height="match_parent"
+    android:alpha="0.0">
 
     <View
         android:id="@+id/on_view_main"
@@ -215,7 +200,7 @@
         android:id="@+id/get_driver_coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:elevation="10dp">
+        android:elevation="50dp">
 
         <LinearLayout
             android:id="@+id/reasons_bottom_sheet"
@@ -305,7 +290,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_corners_layout"
-            android:elevation="10dp"
+            android:elevation="80dp"
             android:orientation="vertical"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
@@ -431,7 +416,7 @@
                 <Button
                     android:id="@+id/confirm_accept_driver"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_height="50dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/bg_btn_blue"
@@ -442,7 +427,7 @@
                     android:textSize="16sp" />
 
                 <ProgressBar
-                    android:id="@+id/progress_bar"
+                    android:id="@+id/progress_bar_btn"
                     android:layout_width="30dp"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
@@ -520,7 +505,7 @@
         android:id="@+id/coordinator_confirm_cancel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:elevation="10dp">
+        android:elevation="60dp">
 
         <LinearLayout
             android:id="@+id/confirm_cancel_bottom_sheet"
@@ -609,6 +594,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0"
+        android:elevation="40dp"
         android:background="@android:color/black"
         android:visibility="gone" />
 
