--- a/app/src/main/res/layout/map_create_ride_fragment.xml
+++ b/app/src/main/res/layout/map_create_ride_fragment.xml
@@ -3,6 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View
+        android:id="@+id/on_map_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0"
+        android:background="@android:color/white"
+        android:elevation="50dp"/>
 
     <com.yandex.mapkit.mapview.MapView
         android:id="@+id/map"
