--- a/app/src/main/res/layout/regular_create_ride_layout.xml
+++ b/app/src/main/res/layout/regular_create_ride_layout.xml
@@ -361,7 +361,7 @@
                         android:textSize="16sp" />
 
                     <ProgressBar
-                        android:id="@+id/progress_bar"
+                        android:id="@+id/progress_bar_btn"
                         android:layout_width="30dp"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
