--- a/app/src/main/res/layout/regular_ride_item.xml
+++ b/app/src/main/res/layout/regular_ride_item.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="15dp"
     android:layout_marginTop="15dp"
     android:layout_marginEnd="15dp"
     android:layout_marginBottom="15dp"
+    android:outlineAmbientShadowColor="#ababab"
+    android:outlineSpotShadowColor="#ababab"
+    android:translationZ="14dp"
     app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="15dp"
-    app:cardElevation="7dp"
-    android:translationZ="10dp">
+    app:cardElevation="1px"
+    tools:targetApi="p">
 
 
     <LinearLayout
