--- a/app/src/main/res/layout/regular_rides_fragment.xml
+++ b/app/src/main/res/layout/regular_rides_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/progress_bar_btn"
         android:layout_width="25dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
