--- a/app/src/main/res/layout/track_ride_layout.xml
+++ b/app/src/main/res/layout/track_ride_layout.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/driver_info_layout"
+    android:id="@+id/track_ride_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:alpha="0.0">
+
+    <ImageButton
+        android:id="@+id/show_route"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_above="@id/main_info_layout"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/bg_back_btn"
+        android:elevation="10dp"
+        android:paddingEnd="1dp"
+        android:src="@drawable/ic_show_route"
+        android:visibility="gone" />
 
 
     <LinearLayout
@@ -49,8 +63,10 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
                 android:layout_marginStart="20dp"
+                android:layout_marginTop="15dp"
                 android:gravity="bottom"
                 android:orientation="vertical">
 
@@ -63,8 +79,8 @@
 
                 <TextView
                     android:id="@+id/driver_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="100dp"
+                    android:layout_height="20dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="15dp"
@@ -86,8 +102,8 @@
 
                 <TextView
                     android:id="@+id/car_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="100dp"
+                    android:layout_height="29dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="15dp"
                     android:background="@drawable/bg_car_number"
@@ -102,8 +118,8 @@
 
                 <TextView
                     android:id="@+id/car_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="150dp"
+                    android:layout_height="25dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="15dp"
                     android:textColor="#70000000"
@@ -116,6 +132,7 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
+                        android:id="@+id/phone_call_layout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
@@ -143,6 +160,7 @@
 
 
                     <RelativeLayout
+                        android:id="@+id/chat_layout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
 
@@ -209,7 +227,7 @@
         android:id="@+id/main_coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:elevation="10dp">
+        android:elevation="50dp">
 
         <LinearLayout
             android:id="@+id/reasons_bottom_sheet"
@@ -403,7 +421,7 @@
         android:id="@+id/coordinator_confirm_cancel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:elevation="10dp">
+        android:elevation="60dp">
 
         <LinearLayout
             android:id="@+id/confirm_cancel_bottom_sheet"
@@ -494,6 +512,7 @@
         android:layout_height="match_parent"
         android:alpha="0"
         android:background="@android:color/black"
+        android:elevation="40dp"
         android:visibility="gone" />
 
 </RelativeLayout>
