--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -75,17 +75,17 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/checkout_account"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mini_profile"
-        app:layout_constraintBottom_toTopOf="@+id/checkout_account">
+        app:layout_constraintTop_toBottomOf="@+id/mini_profile">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/confirm_person"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -95,7 +95,8 @@
                 android:paddingStart="15dp"
                 android:paddingTop="21dp"
                 android:paddingEnd="15dp"
-                android:theme="@style/ThemeOverlay.AppCompat.Light">
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -106,15 +107,23 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/subtitle_item"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:text="@string/forMoreTrustDrivers"
                     android:textColor="#60000000"
-                    android:textSize="12sp"
-                    android:visibility="gone"/>
+                    android:textSize="12sp" />
 
-            </LinearLayout>
+                <ImageView
+                    android:layout_marginTop="1dp"
+                    android:id="@+id/moderate_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="16dp"
+                    android:src="@drawable/ic_clock_moderate" />
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/about_car"
@@ -129,6 +138,21 @@
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
                 android:theme="@style/ThemeOverlay.AppCompat.Light" />
+
+            <TextView
+                android:id="@+id/profits"
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:background="?attr/selectableItemBackground"
+                android:drawableEnd="@drawable/ic_arrow_right"
+                android:gravity="center_vertical"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
+                android:text="@string/profits"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:theme="@style/ThemeOverlay.AppCompat.Light" />
+
 
             <TextView
                 android:id="@+id/add_card"
@@ -174,6 +198,36 @@
                 android:visibility="gone" />
 
 
+            <LinearLayout
+                android:id="@+id/select_city"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:minHeight="65dp"
+                android:orientation="vertical"
+                android:paddingStart="15dp"
+                android:paddingTop="21dp"
+                android:paddingEnd="15dp"
+                android:theme="@style/ThemeOverlay.AppCompat.Light">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@drawable/ic_arrow_right"
+                    android:text="@string/selectCity"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/subtitle_city"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#60000000"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+
             <TextView
                 android:id="@+id/change_lang"
                 android:layout_width="match_parent"
@@ -185,20 +239,6 @@
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp"
                 android:text="@string/changeLang"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:theme="@style/ThemeOverlay.AppCompat.Light" />
-
-            <TextView
-                android:id="@+id/set_rating_app"
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:background="?attr/selectableItemBackground"
-                android:drawableEnd="@drawable/ic_arrow_right"
-                android:gravity="center_vertical"
-                android:paddingStart="15dp"
-                android:paddingEnd="15dp"
-                android:text="@string/setRatingApp"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
                 android:theme="@style/ThemeOverlay.AppCompat.Light" />
@@ -229,21 +269,6 @@
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp"
                 android:text="@string/conditionUse"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:theme="@style/ThemeOverlay.AppCompat.Light"
-                android:visibility="gone" />
-
-            <TextView
-                android:id="@+id/help_for_driver"
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:background="?attr/selectableItemBackground"
-                android:drawableEnd="@drawable/ic_arrow_right"
-                android:gravity="center_vertical"
-                android:paddingStart="15dp"
-                android:paddingEnd="15dp"
-                android:text="@string/help"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
                 android:theme="@style/ThemeOverlay.AppCompat.Light" />
