--- a/app/src/main/res/layout/banking_activity.xml
+++ b/app/src/main/res/layout/banking_activity.xml
@@ -19,7 +19,7 @@
         <ImageView
             android:id="@+id/back_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="1dp"
             android:paddingStart="15dp"
             android:paddingTop="18dp"
