--- a/app/src/main/res/layout/detail_story_activity.xml
+++ b/app/src/main/res/layout/detail_story_activity.xml
@@ -52,7 +52,7 @@
             <com.yandex.mapkit.mapview.MapView
                 android:id="@+id/map"
                 android:layout_width="match_parent"
-                android:layout_height="300dp" />
+                android:layout_height="400dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -190,6 +190,7 @@
             </RelativeLayout>
 
             <TextView
+                android:id="@+id/name_of_partner"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:background="#F4F4F4"
@@ -206,7 +207,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/driver_name"
+                    android:id="@+id/man_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -251,7 +252,7 @@
                     android:id="@+id/car_name_and_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="35dp"
                     android:fontFamily="@font/roboto"
                     android:paddingStart="15dp"
                     android:paddingEnd="15dp"
@@ -262,7 +263,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="35dp"
+                    android:layout_marginTop="20dp"
                     android:fontFamily="@font/roboto"
                     android:gravity="center"
                     android:paddingStart="15dp"
@@ -274,17 +275,18 @@
 
                 <Button
                     android:id="@+id/support"
+                    style="?android:attr/borderlessButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="20dp"
-                    android:background="@drawable/bg_btn_gray"
+                    android:background="@drawable/bg_btn_more_gray"
                     android:fontFamily="@font/roboto"
-                    android:shadowColor="@color/colorBlue"
                     android:text="@string/support1"
                     android:textAllCaps="false"
+                    android:textColor="@android:color/black"
                     android:textSize="16sp" />
 
 
