--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorBlue">#1152FD</color>
     <color name="colorBlack">#2B2B2B</color>
     <color name="colorGray">#C7CAD7</color>
+    <color name="moreGray">#F0F0F0</color>
     <color name="colorStatusBar">#FFFFFF</color>
     <color name="normalStateET">#20000000</color>
 </resources>
